Mon Aug 12 13:29:09 2013  Zachary Scott  <e@zzak.io>

	* lib/yaml/dbm.rb: [DOC] Document call-seq for YAML::DBM

Mon Aug 12 12:57:26 2013  Zachary Scott  <e@zzak.io>

	* ext/dbm/extconf.rb: [DOC] Hide from RDoc
	  Some libraries might want to document extconf.rb so RDoc treats it
	  like any other ruby program. However, DBM users shouldn't care about
	  these methods.

Mon Aug 12 12:53:39 2013  Zachary Scott  <e@zzak.io>

	* ext/dbm/dbm.c: [DOC] Reformat headings of DBM class

Mon Aug 12 12:46:31 2013  Zachary Scott  <e@zzak.io>

	* lib/yaml.rb, lib/yaml/: [DOC] Document YAML::DBM#key and add
	  references to similar methods with more detail. This patch brings
	  lib/yaml to 100% documentation coverage.

Mon Aug 12 02:51:32 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/readline/readline.c (readline_s_set_input): on OS X with editline,
	  Readline.readline doesn't work because readline_get doesn't use
	  rl_getc. The difference is introduced by r42402 [ruby-dev:47509]
	  [Bug #8644]. Before it rb_io_stdio_file set ifp->stdio_file.
	  Therefore add manually setting the value.

	* ext/readline/readline.c (readline_s_set_onput): ditto.

Sun Aug 11 23:27:00 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_str_encode_ospath): OS path encoding on Mac OS X is also
	  fixed.

Sun Aug 11 22:57:24 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/test_require.rb (assert_require_nonascii_path): OS path
	  encoding on Windows is fixed, so encoding of __FILE__ should be it.
	  [ruby-core:56498] [Bug #8764]

Sun Aug 11 19:11:45 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/parser/test_sax2.rb: Expand abbreviated class name.

Sun Aug 11 19:06:03 2013  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/sax2listener.rb (REXML::SAX2Listener#notationdecl): Fix
	  wrong number of arguments in the template listener.
	  [Bug #8731] [ruby-dev:47582]
	  Reported by Ippei Obayashi.
	* test/rexml/parser/test_sax2.rb: Add tests for parsing notation